--- a/vue2-app/index.html
+++ b/vue2-app/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="app"></div>
+    <script src="https://unpkg.com/systemjs/dist/system.js"></script>
     <script src="bundle.js"></script>
 </body>
 </html>
