--- a/vue2-app/index.html
+++ b/vue2-app/index.html
@@ -8,6 +8,7 @@
 <body>
     <div id="app"></div>
     <script src="https://unpkg.com/systemjs/dist/system.js"></script>
-    <script src="bundle.js"></script>
+    <script src="shell.bundle.js"></script> <!-- Load shell.js from the public folder -->
+    <script src="app.bundle.js"></script>
 </body>
 </html>
