--- a/vue3-app/index.html
+++ b/vue3-app/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue 3 Application</title>
-</head>
+    <script src="https://unpkg.com/systemjs/dist/system.js"></script>
+    </head>
 <body>
     <div id="app"></div>
-    <script src="/v2/bundle.js"></script>
+    <!-- <script src="/v2/system.bundle.js"></script>  -->
+    <script src="/v2/primary.bundle.js"></script>
 </body>
 </html>
